# MLcpp

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  setup.sh  test.cpp
dataset/: binary_test1.csv  real_estate.csv  test1.csv  test2.csv
datasets/: breast_cancer.csv
examples/dataloader/: CMakeLists.txt  main.cpp
examples/dataset/: CMakeLists.txt  dataset_test  main.cpp
examples/linear_regression/: CMakeLists.txt  main.cpp
examples/linear_regression/models/: lr_bgd.json  lr_mbgd.json  lr_sgd.json
examples/loading_models/: CMakeLists.txt  main.cpp
examples/logistic_regression/: CMakeLists.txt  main.cpp
examples/logistic_regression/models/: b_weights.json  mb_weights.json  s_weights.json  weights.json
examples/loss/: CMakeLists.txt  main.cpp
examples/normalization/: CMakeLists.txt  main.cpp
include/: examples.h
include/Dataset/: dataset.h
include/Loss/: binary_cross_entropy.h  mean_squared_error.h
include/Optimizers/: bgd.h  sgd.h
include/Preprocessing/: normalization.h
include/Regression/: linear.h  logistic.h
src/: examples.cpp  main.cpp
src/Dataset/: dataset.cpp
src/Loss/: binary_cross_entropy.cpp  mean_squared_error.cpp
src/Optimizers/: bgd.cpp  sgd.cpp
src/Preprocessing/: Normalization.cpp
src/Regression/: linear.cpp  logistic.cpp
src/dataset/: README.md  dataloader.cpp  dataloader.h  dataset.cpp  dataset.h
src/loss/: README.md  loss.cpp  loss.h
src/model_utils/: README.md  utils.cpp  utils.h
src/normalization/: README.md  norm.cpp  norm.h
src/optimizers/: README.md  optim.cpp  optim.h
src/utilities/: type.cpp
